--- a/pom.xml
+++ b/pom.xml
@@ -52,20 +52,24 @@
 		<dependency>
 		    <groupId>org.projectlombok</groupId>
 		    <artifactId>lombok</artifactId>
-		    <version>0.11.4</version>
 		    <scope>provided</scope>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-crypto -->
 		<dependency>
 		    <groupId>org.springframework.security</groupId>
 		    <artifactId>spring-security-crypto</artifactId>
-		    <version>3.1.0.RELEASE</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-core -->
+		<dependency>
+		    <groupId>org.springframework.security</groupId>
+		    <artifactId>spring-security-core</artifactId>
+		</dependency>
+				
 		<!-- https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt -->
 		<dependency>
 		    <groupId>io.jsonwebtoken</groupId>
 		    <artifactId>jjwt</artifactId>
-		    <version>0.2</version>
+		    <version>0.5.1</version>
 		</dependency>
 				
 			<!-- https://mvnrepository.com/artifact/com.tiemens/secretshare -->
@@ -75,7 +79,21 @@
 			    <version>1.4.1</version>
 			</dependency>
 			
-				
+			<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-web -->
+			<dependency>
+			    <groupId>org.springframework.security</groupId>
+			    <artifactId>spring-security-web</artifactId>
+			    <version>5.0.6.RELEASE</version>
+			</dependency>
+					
+					<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-config -->
+				<dependency>
+				    <groupId>org.springframework.security</groupId>
+				    <artifactId>spring-security-config</artifactId>
+				    <version>3.2.0.RELEASE</version>
+				</dependency>
+									
+						
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
