--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.datasource.driver-class-name = org.postgresql.Driver
 spring.datasource.url = jdbc:postgresql://localhost:5432/SpringSecurity
-spring.datasource.username = postgres
+spring.datasource.username = sunilv
 spring.datasource.password = test
 
-# = JPA / HIBERNATE
+# = JPA / HIBERNATEs
 # ===============================
 # Use spring.jpa.properties.* for Hibernate native properties (the prefix is
 # stripped before adding them to the entity manager).
