--- a/pom.xml
+++ b/pom.xml
@@ -48,12 +48,14 @@
 			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+			<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
 		<dependency>
 		    <groupId>org.projectlombok</groupId>
 		    <artifactId>lombok</artifactId>
+		    <version>1.18.0</version>
 		    <scope>provided</scope>
 		</dependency>
+			
 		<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-crypto -->
 		<dependency>
 		    <groupId>org.springframework.security</groupId>
@@ -92,13 +94,33 @@
 				    <artifactId>spring-security-config</artifactId>
 				    <version>3.2.0.RELEASE</version>
 				</dependency>
-									
-						
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>
+								
+				<dependency>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-starter-test</artifactId>
+					<scope>test</scope>
+				</dependency>
+				
+				<dependency>
+					<!-- Automated JSON API documentation for API's built with Spring -->
+					<groupId>io.springfox</groupId>
+					<artifactId>springfox-swagger2</artifactId>
+					<version>2.7.0</version>
+				</dependency>
+				<dependency>
+					<!-- Generate beautiful documentation from a Swagger-compliant API. -->
+					<groupId>io.springfox</groupId>
+					<artifactId>springfox-swagger-ui</artifactId>
+					<version>2.7.0</version>
+				</dependency>
+				
+				<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-annotations -->
+				<dependency>
+				    <groupId>com.fasterxml.jackson.core</groupId>
+				    <artifactId>jackson-annotations</artifactId>
+				    <version>2.9.6</version>
+				</dependency>
+		
 		<!-- https://mvnrepository.com/artifact/org.springframework/spring-web -->
 		<dependency>
 		    <groupId>org.springframework</groupId>
