--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,6 +21,7 @@ spring.jpa.hibernate.naming.strategy= org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 # Configuring the port number for the application to run on
 server.port = 8084
+spring.jpa.show-sql=true
 # Initialize the schema on startup.
 spring.jpa.generate-ddl = true
 # Keep the connection alive if idle for a long time (needed in production)
